<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="462dp"
        android:layout_height="249dp"
        android:backgroundTint="#831717"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/up" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="343dp"
        android:layout_height="229dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        app:srcCompat="@drawable/updoo" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginBottom="30dp"
        android:background="#87CEEB"
        android:backgroundTint="#87CEEB"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.655"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginStart="4dp"
            android:text="DATE "
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.062" />

        <EditText
            android:id="@+id/edit_date"
            android:layout_width="140dp"
            android:layout_height="38dp"
            android:layout_marginStart="60dp"
            android:backgroundTint="@color/white"
            android:inputType="date"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.049" />

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginStart="210dp"
            android:text="TIME"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.062" />

        <EditText
            android:id="@+id/edit_time"
            android:layout_width="130dp"
            android:layout_height="38dp"
            android:layout_marginStart="262dp"
            android:backgroundTint="@color/white"
            android:inputType="time"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.049" />

        <TextView
            android:id="@+id/sys_pr"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="10dp"
            android:text="Systolic Pressure:"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.224" />

        <EditText
            android:id="@+id/edit_sys_pr"
            android:layout_width="111dp"
            android:layout_height="38dp"
            android:layout_marginStart="175dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/white"
            android:inputType="number"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.214" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginStart="285dp"
            android:layout_marginTop="10dp"
            android:text="mm/Hg"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.224" />

        <TextView
            android:id="@+id/dias_pr"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="25dp"
            android:text="Diastolic Pressure:"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.387" />

        <EditText
            android:id="@+id/edit_dias_pr"
            android:layout_width="111dp"
            android:layout_height="38dp"
            android:layout_marginStart="173dp"
            android:layout_marginTop="25dp"
            android:backgroundTint="@color/white"
            android:inputType="number"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.379" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginStart="287dp"
            android:layout_marginTop="25dp"
            android:text="mm/Hg"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.39" />

        <TextView
            android:id="@+id/heart_rate"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="55dp"
            android:text="Heart Rate:"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.55" />

        <EditText
            android:id="@+id/edit_heart_rate"
            android:layout_width="111dp"
            android:layout_height="38dp"
            android:layout_marginStart="104dp"
            android:layout_marginTop="55dp"
            android:backgroundTint="@color/white"
            android:inputType="number"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.541" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginStart="218dp"
            android:layout_marginTop="55dp"
            android:text=" bpm"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.549" />

        <TextView
            android:id="@+id/comment"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="115dp"
            android:text="Comment:"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.713" />

        <EditText
            android:id="@+id/edit_comment"
            android:layout_width="285dp"
            android:layout_height="38dp"
            android:layout_marginStart="96dp"
            android:layout_marginTop="115dp"
            android:backgroundTint="@color/white"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.707" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/button_edit"
        android:layout_width="110dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="70dp"
        android:backgroundTint="#87CEEB"
        android:text="Save"
        android:drawableLeft="@drawable/ic_baseline_save_24"
        android:textColor="#359A00"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_delete"
        android:layout_width="135dp"
        android:layout_height="50dp"
        android:layout_marginStart="230dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="70dp"
        android:backgroundTint="#87CEEB"
        android:text="REMOVE"
        android:drawableLeft="@drawable/ic_baseline_delete_24"
        android:textColor="#ff0000"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>