<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="175dp"
        android:background="@drawable/vector"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="4dp">

        <TextView
            android:layout_width="250dp"
            android:layout_height="100dp"
            android:layout_marginStart="120dp"
            android:layout_marginTop="55dp"
            android:layout_marginBottom="10dp"
            android:gravity="center_vertical"
            android:text="Add New Checkup"
            android:textColor="#FFFFFF"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.097"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:layout_marginTop="45dp"
        android:background="#87CEEB"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.498"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginStart="12dp"
            android:text="Date:"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.058" />

        <EditText
            android:id="@+id/edit_date"
            android:layout_width="323dp"
            android:layout_height="32dp"
            android:layout_marginStart="59dp"
            android:backgroundTint="@color/white"
            android:inputType="date"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.056" />

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="6dp"
            android:text="Time:"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.216" />

        <EditText
            android:id="@+id/edit_time"
            android:layout_width="320dp"
            android:layout_height="32dp"
            android:layout_marginStart="64dp"
            android:backgroundTint="@color/white"
            android:inputType="time"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.233" />

        <TextView
            android:id="@+id/sys_pr"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="4dp"
            android:text="Systolic Pressure:"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.396" />

        <EditText
            android:id="@+id/edit_sys_pr"
            android:layout_width="104dp"
            android:layout_height="32dp"
            android:layout_marginStart="176dp"
            android:backgroundTint="@color/white"
            android:inputType="number"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.405" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="84dp"
            android:layout_height="32dp"
            android:layout_marginStart="279dp"
            android:layout_marginTop="2dp"
            android:text="mm Hg"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.401" />

        <TextView
            android:id="@+id/dias_pr"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="10dp"
            android:text="Diastolic Pressure:"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.558" />

        <EditText
            android:id="@+id/edit_dais_pr"
            android:layout_width="102dp"
            android:layout_height="32dp"
            android:layout_marginStart="185dp"
            android:backgroundTint="@color/white"
            android:inputType="number"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.576" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginStart="287dp"
            android:text="mm Hg"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.576" />

        <TextView
            android:id="@+id/heat_rate"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:text="Heart Rate:"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.73" />

        <EditText
            android:id="@+id/edit_heat_rate"
            android:layout_width="110dp"
            android:layout_height="32dp"
            android:layout_marginStart="116dp"
            android:layout_marginTop="25dp"
            android:backgroundTint="@color/white"
            android:inputType="number"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.713" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginStart="227dp"
            android:layout_marginTop="25dp"
            android:text=" bpm"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.713" />

        <TextView
            android:id="@+id/comment"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="10dp"
            android:text="Comment:"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.905" />

        <EditText
            android:id="@+id/edit_comment"
            android:layout_width="266dp"
            android:layout_height="32dp"
            android:layout_marginStart="108dp"
            android:layout_marginTop="55dp"
            android:backgroundTint="@color/white"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.88" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/button_save"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginStart="152dp"
        android:layout_marginBottom="50dp"
        android:backgroundTint="#87CEEB"
        android:text="ADD"
        android:drawableLeft="@drawable/save"
        android:drawableTintMode="add"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>